--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-cl/ensemble.pkl
+*.egg-info
+*.pot
+*.py[co]
+.tox/
+__pycache__
+MANIFEST
+dist/
+docs/_build/
+docs/locale/
+node_modules/
+tests/coverage_html/
+tests/.coverage*
+build/
+tests/report/
+tests/screenshots/
+/*.sqlite3
+/*.log
+
+movie-vectordb
+cl/ensemble_model.pkl
