--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ annotated-types==0.6.0
 anyio==4.3.0
 asgiref==3.8.1
 backoff==2.2.1
-bcrypt==4.1.2
+bcrypt==4.1.3
 build==1.2.1
 cachetools==5.3.3
 certifi==2024.2.2
@@ -14,16 +14,19 @@ colorama==0.4.6
 coloredlogs==15.0.1
 Deprecated==1.2.14
 distro==1.9.0
-Django==5.0.4
+Django==5.0.6
+dnspython==2.6.1
 docstring_parser==0.16
-fastapi==0.110.2
-filelock==3.13.4
+email_validator==2.1.1
+fastapi==0.111.0
+fastapi-cli==0.0.3
+filelock==3.14.0
 flatbuffers==24.3.25
-fsspec==2024.3.1
-google-api-core==2.18.0
+fsspec==2024.5.0
+google-api-core==2.19.0
 google-auth==2.29.0
-google-cloud-aiplatform==1.48.0
-google-cloud-bigquery==3.21.0
+google-cloud-aiplatform==1.49.0
+google-cloud-bigquery==3.22.0
 google-cloud-core==2.4.1
 google-cloud-resource-manager==1.12.3
 google-cloud-storage==2.16.0
@@ -31,21 +34,23 @@ google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
 grpc-google-iam-v1==0.13.0
-grpcio==1.62.2
+grpcio==1.63.0
 grpcio-status==1.62.2
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
 httpx==0.27.0
-huggingface-hub==0.22.2
+huggingface-hub==0.23.0
 humanfriendly==10.0
 idna==3.7
 importlib-metadata==7.0.0
 importlib_resources==6.4.0
-joblib==1.4.0
+Jinja2==3.1.4
+joblib==1.4.2
 kubernetes==29.0.0
 lightgbm==4.3.0
 markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 mdurl==0.1.2
 mmh3==4.1.0
 monotonic==1.6
@@ -53,7 +58,7 @@ mpmath==1.3.0
 numpy==1.26.4
 oauthlib==3.2.2
 onnxruntime==1.17.3
-openai==1.21.2
+openai==1.30.1
 opentelemetry-api==1.24.0
 opentelemetry-exporter-otlp-proto-common==1.24.0
 opentelemetry-exporter-otlp-proto-grpc==1.24.0
@@ -64,7 +69,7 @@ opentelemetry-proto==1.24.0
 opentelemetry-sdk==1.24.0
 opentelemetry-semantic-conventions==0.45b0
 opentelemetry-util-http==0.45b0
-orjson==3.10.1
+orjson==3.10.3
 overrides==7.7.0
 packaging==24.0
 posthog==3.5.0
@@ -72,14 +77,15 @@ proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
-pydantic==2.7.0
-pydantic_core==2.18.1
-Pygments==2.17.2
+pydantic==2.7.1
+pydantic_core==2.18.2
+Pygments==2.18.0
 PyPika==0.48.9
-pyproject_hooks==1.0.0
+pyproject_hooks==1.1.0
 pyreadline3==3.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-multipart==0.0.9
 pytz==2024.1
 PyYAML==6.0.1
 requests==2.31.0
@@ -95,19 +101,20 @@ sniffio==1.3.1
 sqlparse==0.5.0
 starlette==0.37.2
 sympy==1.12
-tenacity==8.2.3
-threadpoolctl==3.4.0
+tenacity==8.3.0
+threadpoolctl==3.5.0
 tokenizers==0.19.1
-tqdm==4.66.2
+tqdm==4.66.4
 typer==0.12.3
 typing_extensions==4.11.0
 tzdata==2024.1
+ujson==5.10.0
 urllib3==2.2.1
 uvicorn==0.29.0
-vertexai==1.48.0
+vertexai==1.49.0
 watchfiles==0.21.0
 websocket-client==1.8.0
 websockets==12.0
 wrapt==1.16.0
 xgboost==2.0.3
-zipp==3.18.1
+zipp==3.18.2
